frontend/test/should_fail/no_exec_eval_stmt_in_subpattern.grg
rule retypeA
{
	modify {
	}
}

rule r4
{
	q:Q();
	
	modify {
		q();
	}
}

pattern Q
{
	modify {
	---
		eval { exec([retypeA()]); }
	}
}
